<resources>
    <string name="app_name">Vallet</string>
    <string name="cadastro_de_carros">Cadastro de Carros</string>
    <string name="adicionar_veiculo">Adicionar Veículo</string>
    <string name="finalizar_cadastro">Finalizar Cadastro</string>
    <string name="dados_do_estacionamento">Dados do Estacionamento</string>
    <string name="meus_veiculos">Meus Veículos</string>
    <string name="confirmar">CONFIRMAR</string>
    <string name="cancelar">CANCELAR</string>
    <string name="tipo_veiculo">Tipo de Veículo</string>
    <string name="placa">Placa</string>
    <string name="marca">Marca</string>
    <string name="modelo">Modelo</string>
    <string name="apelido">Apelido (opcional)</string>
    <string name="ano">Ano</string>
    <string name="KM">Km\'s</string>
    <string name="carro">Carro</string>
    <string name="moto">Moto</string>
    <string name="slider">Slider de tempo</string>
    <string name="editar_veiculo">Editar Veículo</string>

    <!-- Strings do Dashboard -->
    <string name="dashboard_reserva_atual">Sua Reserva Atual</string>
    <string name="dashboard_estacionamento_nome">Nome do Estacionamento</string>
    <string name="dashboard_localizacao">Localização</string>
    <string name="dashboard_horario_reserva">14:00 - 16:00</string>
    <string name="dashboard_reserva_ativa">Reserva Ativa</string>
    <string name="dashboard_ver_reserva">VER RESERVA</string>
    <string name="dashboard_sem_reserva">Você não possui reservas ativas.&#10;Clique aqui para ver as vagas disponíveis.</string>
    <string name="dashboard_estatisticas">Suas Estatísticas</string>
    <string name="dashboard_reservas">Reservas</string>
    <string name="dashboard_tempo_total">Tempo total</string>
    <string name="dashboard_historico_recente">Histórico Recente</string>
</resources>
